# fastapi-base

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  permissions.py  roles.py  users.py
app/core/: config.py  dependencies.py  exception.py  exceptions.py  security.py
app/core/middleware/: csrf_middleware.py  exception_middleware.py  logging_middleware.py  rate_limiting_middleware.py  security_headers_middleware.py
app/crud/: base.py  permission.py  role.py  user.py
app/db/: base.py  init_db.py  init_superuser.py  init_superuser_sql.py  session.py
app/models/: __init__.py  permission.py  role.py  user.py
app/schemas/: base.py  permission.py  role.py  token.py  user.py
app/services/: auth.py
app/test/api/v1/templates/: teste.html
app/test/templates/: teste.html
scripts/: a_instalar_dependencias.txt  b_criar_alembic.txt  c_criar_database.txt  d_rodar_projeto.txt  e_arquivo_pylintrc.txt  lint.py  lint.sh.bkp  start.sh
